--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ jinja2 = ">=3.1.2"
 httpx = ">=0.25.0"
 websockets = ">=12.0"
 pydantic = ">=2.4.2"
+chatline = {git = "https://github.com/anotherbazeinthewall/chatline-interface.git"}
 
 [tool.poetry.group.test-server.dependencies]
 bs4 = ">=0.0.2"
