--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "protottyde"
+name = "protottyde-adapter-web"
 version = "0.1.0"
-description = "Serve Python CLI applications in the browser using ttyd"
+description = "Web interface for protottyde"
 authors = ["Alex Basile <basileaw@gmail.com>"]
 readme = "README.md"
 
@@ -13,11 +13,8 @@ build-backend = "poetry.core.masonry.api"
 python = "^3.12"
 fastapi = ">=0.104.0"
 uvicorn = ">=0.24.0"
-jinja2 = ">=3.1.2"
-httpx = ">=0.25.0"
-websockets = ">=12.0"
-pydantic = ">=2.4.2"
-chatline = {git = "https://github.com/anotherbazeinthewall/chatline-interface.git"}
+protottyde = { git = "https://github.com/anotherbazeinthewall/protottyde-adapter.git" }
+chatline = { git = "https://github.com/anotherbazeinthewall/chatline-interface.git" }
 
 [tool.poetry.group.test-server.dependencies]
 bs4 = ">=0.0.2"
