--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
-name = "protottyde-adapter-web"
+name = "protottyde"
 version = "0.1.0"
-description = "Web interface for protottyde"
+description = "Serve Python CLI applications in the browser using ttyd"
 authors = ["Alex Basile <basileaw@gmail.com>"]
-readme = "README.md"
+packages = [{ include = "protottyde" }]
 
 [build-system]
 requires = ["poetry-core"]
@@ -13,7 +13,10 @@ build-backend = "poetry.core.masonry.api"
 python = "^3.12"
 fastapi = ">=0.104.0"
 uvicorn = ">=0.24.0"
-protottyde = { git = "https://github.com/anotherbazeinthewall/protottyde-adapter.git" }
+jinja2 = ">=3.1.2"
+httpx = ">=0.25.0"
+websockets = ">=12.0"
+pydantic = ">=2.4.2"
 chatline = { git = "https://github.com/anotherbazeinthewall/chatline-interface.git" }
 
 [tool.poetry.group.test-server.dependencies]
