--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,13 +20,16 @@ httpx = ">=0.25.0"
 websockets = ">=12.0"
 pydantic = ">=2.4.2"
 
-[tool.poetry.group.dev.dependencies]
-docker = "^7.1.0"
+[tool.poetry.group.test.dependencies]
 uvicorn = ">=0.24.0"
 
+[tool.poetry.group.dev.dependencies]
+docker = "^7.1.0"
+poethepoet = "^0.33.0"
+
 [tool.poe.tasks]
-serve-local = "python tests/server.py"
-serve-container = "python tests/container.py"
+serve = "python tests/server.py"
+contain = "python tests/container.py"
 
 [tool.poe.tasks.release]
 args = ["type"]
