--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ jinja2 = ">=3.1.2"
 httpx = ">=0.25.0"
 websockets = ">=12.0"
 pydantic = ">=2.4.2"
+readchar = "^4.2.1"
 
 [tool.poetry.group.test.dependencies]
 uvicorn = ">=0.24.0"
