--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,6 @@ httpx = ">=0.25.0"
 websockets = ">=12.0"
 pydantic = ">=2.4.2"
 readchar = "^4.2.1"
-
-[tool.poetry.group.test.dependencies]
 uvicorn = ">=0.24.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -29,22 +27,10 @@ docker = "^7.1.0"
 poethepoet = "^0.33.0"
 
 [tool.poe.tasks]
-contain = "python tests/container.py"
-
-[tool.poe.tasks.serve]
-cmd = "python tests/server.py"
-args = [
-  { name = "mode", default = "demo", help = "Server mode (demo, single, multi_no_root, etc.)" },
-  { name = "port", default = "8000", help = "Port number" },
-]
-help = """Run the test server in different configuration modes:
-
-- demo: Default mode with the built-in demo at root
-- single: Single script at root path
-- multi_no_root: Multiple scripts with demo at root
-- multi_with_root: Multiple scripts with client.py at root
-- combined: Both client_script and script_routes defined
-- user_root_after/before: Custom user route at root path"""
+serve = { cmd = "python tests/server.py", help = "Run the server in default mode" }
+serve-single = { cmd = "python tests/server.py --mode single", help = "Run in single mode" }
+serve-multi = { cmd = "python tests/server.py --mode multi", help = "Run in multi mode" }
+serve-container = { cmd = "python tests/container.py", help = "Run in container mode" }
 
 [tool.poe.tasks.release]
 args = ["type"]
