--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ pydantic = ">=2.4.2"
 readchar = "^4.2.1"
 uvicorn = ">=0.24.0"
 
+# [tool.poetry.group.test.dependencies]
+# uvicorn = ">=0.24.0"
+
 [tool.poetry.group.dev.dependencies]
 docker = "^7.1.0"
 poethepoet = "^0.33.0"
