--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,9 @@ docker = "^7.1.0"
 poethepoet = "^0.33.0"
 
 [tool.poe.tasks.serve]
-cmd = "python example/server.py ${args}"
+cmd = "python demo/server.py ${args}"
 help = """
-Run example server in one of 4 modes (also supports --port flag):
+Run demo server in one of 4 modes (also supports --port flag):
 
 default   - No client_script/terminal_routes/server routes (serves instructions by default).
 single    - Client_script launches all games from root (no terminal_routes/server routes).
