--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ httpx = ">=0.25.0"
 websockets = ">=12.0"
 pydantic = ">=2.4.2"
 readchar = "^4.2.1"
+
+[tool.poetry.group.demo.dependencies]
 uvicorn = ">=0.24.0"
 
 [tool.poetry.group.dev.dependencies]
