--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,6 @@ httpx = ">=0.25.0"
 websockets = ">=12.0"
 pydantic = ">=2.4.2"
 readchar = "^4.2.1"
-
-[tool.poetry.group.demo.dependencies]
 uvicorn = ">=0.24.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -32,9 +30,9 @@ docker = "^7.1.0"
 poethepoet = "^0.33.0"
 
 [tool.poe.tasks.serve]
-help = """Run demo server in one of 4 modes:"""
+help = """Run demo server in one of 5 modes:"""
 args = [
-  { name = "mode", positional = true, help = "single | multi | container | default (no args)" },
+  { name = "mode", positional = true, help = "function | script | apps | container | default (no args)" },
 ]
 cmd = "python demo/server.py ${mode} ${args}"
 
