--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ websockets = ">=12.0"
 pydantic = ">=2.4.2"
 readchar = "^4.2.1"
 uvicorn = ">=0.24.0"
+chatline = "^0.0.5"
 
 [tool.poetry.group.dev.dependencies]
 docker = "^7.1.0"
