--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ websockets = ">=12.0"
 pydantic = ">=2.4.2"
 readchar = "^4.2.1"
 uvicorn = ">=0.24.0"
-chatline = {git = "https://github.com/anotherbazeinthewall/chatline-interface"}
+rich = "^14.0.0"
 
 [tool.poetry.group.dev.dependencies]
 docker = "^7.1.0"
