--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,21 +22,18 @@ pydantic = ">=2.4.2"
 readchar = "^4.2.1"
 uvicorn = ">=0.24.0"
 rich = "^14.0.0"
-chatline = {git = "https://github.com/anotherbazeinthewall/chatline-interface"}
+chatline = { git = "https://github.com/anotherbazeinthewall/chatline-interface" }
 
 [tool.poetry.group.dev.dependencies]
 docker = "^7.1.0"
 poethepoet = "^0.33.0"
 
 [tool.poe.tasks.serve]
-help = "Serves an instructional demo (no args) or one of four targeted demos (via args):"
-cmd = "python demo/server.py ${function:+--function} ${script:+--script} ${apps:+--apps} ${container:+--container}"
+help = """Run demo server in one of 5 modes:"""
 args = [
-  { name = "function", type = "boolean", help = "Serves a function" },
-  { name = "script", type = "boolean", help = "Serves a script" },
-  { name = "apps", type = "boolean", help = "Serves multiple scripts" },
-  { name = "container", type = "boolean", help = "Serves multiple scripts in a container" },
+  { name = "mode", positional = true, help = "function | script | apps | container | default (no args)" },
 ]
+cmd = "python demo/server.py ${mode} ${args}"
 
 [tool.poe.tasks.release]
 help = "Release a new version:"
