--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,27 +31,11 @@ poethepoet = "^0.33.0"
 [tool.poe.tasks.serve]
 help = """Run demo server in one of 5 modes:"""
 args = [
-  { name = "mode", positional = true, help = "default (no args) | function | script | apps | container" },
+  { name = "mode", positional = true, help = "instructions (no args) | function | script | apps | container" },
 ]
 cmd = "python demo/server.py ${args}"
 
 [tool.poe.tasks.release]
 help = "Release one of three new versions:"
 args = [{ name = "type", positional = true, help = "patch | minor | major" }]
-sequence = [
-  { cmd = "poetry version ${type}" },
-  { cmd = "git add pyproject.toml" },
-  { shell = """
-      VERSION=$(poetry version -s)
-      git commit -m "release $VERSION"
-      git tag v$VERSION
-      git push && git push --tags
-    """ },
-  { shell = """
-      echo "Please enter your PyPI token:"
-      read -s PYPI_TOKEN
-      export POETRY_PYPI_TOKEN_PYPI=$PYPI_TOKEN
-      poetry publish --build -vvv
-      unset POETRY_PYPI_TOKEN_PYPI
-    """ },
-]
+script = "utilities.release:release"
