--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ packages = [{ include = "terminaide" }]
 python = ">=3.12"
 fastapi = ">=0.104.0"
 jinja2 = ">=3.1.2"
-httpx = ">=0.25.0"
+httpx = ">=0.25.0,<0.28.0"
+httpcore = ">=0.17.3,<0.19.0"
 websockets = ">=12.0"
 pydantic = ">=2.4.2"
 readchar = ">=4.2.1"
