--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,15 @@ packages = [{ include = "terminaide" }]
 python = ">=3.12"
 fastapi = ">=0.104.0"
 jinja2 = ">=3.1.2"
-httpx = ">=0.25.0,<0.28.0"
-httpcore = ">=0.17.3,<0.19.0"
 websockets = ">=12.0"
 pydantic = ">=2.4.2"
 readchar = ">=4.2.1"
 uvicorn = ">=0.24.0"
 rich = ">=14.0.0"
 bs4 = ">=0.0.2"
+httpcore = "^1.0.9"
+httpx = "^0.28.1"
+h11 = "^0.16.0"
 
 [tool.poetry.group.dev.dependencies]
 docker = ">=7.1.0"
