--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ rich = "^14.0.0"
 websockets = "^12.0"
 fastapi = "^0.115.12"
 uvicorn = "^0.34.2"
+pywebview = "^5.4"
+requests = "^2.32.3"
 
 [tool.poetry.group.demo.dependencies]
 docker = "^7.1.0"
