--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ fastapi = "^0.115.12"
 uvicorn = "^0.34.2"
 pywebview = "^5.4"
 requests = "^2.32.3"
+pyfiglet = "^1.0.2"
+bigfont = {git = "https://github.com/cjdurkin/bigfont.git"}
 
 [tool.poetry.group.demo.dependencies]
 docker = "^7.1.0"
