--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,6 @@ dist/
 test.py
 .env
 
-terminaide/core/bin/*
-!terminaide/core/bin/.gitkeep
+terminaide/core/ttyd_bin/*
+!terminaide/core/ttyd_bin/.gitkeep
 .aider*
