--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,10 @@ fastapi = "^0.115.12"
 uvicorn = "^0.34.2"
 pyfiglet = "^1.0.2"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.0"
+pytest-timeout = "^2.4.0"
+requests = "^2.32.0"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
